MiniGo.Compiler/Generated/MiniGoParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/varga/Documents/dev/tec/MiniGoCompiler/MiniGo.Compiler/Grammar/MiniGoParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class MiniGoParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		PACKAGE=1, VAR=2, TYPE=3, FUNC=4, STRUCT=5, IF=6, ELSE=7, FOR=8, SWITCH=9, 
		CASE=10, DEFAULT=11, RETURN=12, BREAK=13, CONTINUE=14, APPEND=15, LEN=16, 
		CAP=17, PRINT=18, PRINTLN=19, PLUS=20, MINUS=21, STAR=22, DIV=23, MOD=24, 
		AMP=25, PIPE=26, CARET=27, LSHIFT=28, RSHIFT=29, BIT_CLEAR=30, LOGICAL_AND=31, 
		LOGICAL_OR=32, NOT=33, EQUALS=34, NOT_EQUALS=35, LESS=36, LESS_EQUALS=37, 
		GREATER=38, GREATER_EQUALS=39, ASSIGN=40, DECLARE_ASSIGN=41, PLUS_ASSIGN=42, 
		MINUS_ASSIGN=43, STAR_ASSIGN=44, DIV_ASSIGN=45, MOD_ASSIGN=46, AMP_ASSIGN=47, 
		PIPE_ASSIGN=48, CARET_ASSIGN=49, LSHIFT_ASSIGN=50, RSHIFT_ASSIGN=51, BIT_CLEAR_ASSIGN=52, 
		INCREMENT=53, DECREMENT=54, LPAREN=55, RPAREN=56, LBRACE=57, RBRACE=58, 
		LBRACKET=59, RBRACKET=60, COMMA=61, DOT=62, COLON=63, SEMICOLON=64, INTLITERAL=65, 
		FLOATLITERAL=66, RUNELITERAL=67, RAWSTRINGLITERAL=68, INTERPRETEDSTRINGLITERAL=69, 
		IDENTIFIER=70, LINE_COMMENT=71, BLOCK_COMMENT=72, WS=73;
	public const int
		RULE_root = 0, RULE_topDeclarationList = 1, RULE_variableDecl = 2, RULE_innerVarDecls = 3, 
		RULE_singleVarDecl = 4, RULE_singleVarDeclNoExps = 5, RULE_typeDecl = 6, 
		RULE_innerTypeDecls = 7, RULE_singleTypeDecl = 8, RULE_funcDecl = 9, RULE_funcFrontDecl = 10, 
		RULE_funcArgDecls = 11, RULE_declType = 12, RULE_sliceDeclType = 13, RULE_arrayDeclType = 14, 
		RULE_structDeclType = 15, RULE_structMemDecls = 16, RULE_identifierList = 17, 
		RULE_expression = 18, RULE_expressionList = 19, RULE_primaryExpression = 20, 
		RULE_operand = 21, RULE_literal = 22, RULE_index = 23, RULE_arguments = 24, 
		RULE_selector = 25, RULE_appendExpression = 26, RULE_lengthExpression = 27, 
		RULE_capExpression = 28, RULE_statementList = 29, RULE_block = 30, RULE_statement = 31, 
		RULE_simpleStatement = 32, RULE_assignmentStatement = 33, RULE_ifStatement = 34, 
		RULE_loop = 35, RULE_switch = 36, RULE_expressionCaseClauseList = 37, 
		RULE_expressionCaseClause = 38, RULE_expressionSwitchCase = 39;
	public static readonly string[] ruleNames = {
		"root", "topDeclarationList", "variableDecl", "innerVarDecls", "singleVarDecl", 
		"singleVarDeclNoExps", "typeDecl", "innerTypeDecls", "singleTypeDecl", 
		"funcDecl", "funcFrontDecl", "funcArgDecls", "declType", "sliceDeclType", 
		"arrayDeclType", "structDeclType", "structMemDecls", "identifierList", 
		"expression", "expressionList", "primaryExpression", "operand", "literal", 
		"index", "arguments", "selector", "appendExpression", "lengthExpression", 
		"capExpression", "statementList", "block", "statement", "simpleStatement", 
		"assignmentStatement", "ifStatement", "loop", "switch", "expressionCaseClauseList", 
		"expressionCaseClause", "expressionSwitchCase"
	};

	private static readonly string[] _LiteralNames = {
		null, "'package'", "'var'", "'type'", "'func'", "'struct'", "'if'", "'else'", 
		"'for'", "'switch'", "'case'", "'default'", "'return'", "'break'", "'continue'", 
		"'append'", "'len'", "'cap'", "'print'", "'println'", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'&'", "'|'", "'^'", "'<<'", "'>>'", "'&^'", "'&&'", "'||'", 
		"'!'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'='", "':='", "'+='", 
		"'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", "'>>='", 
		"'&^='", "'++'", "'--'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", 
		"'.'", "':'", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PACKAGE", "VAR", "TYPE", "FUNC", "STRUCT", "IF", "ELSE", "FOR", 
		"SWITCH", "CASE", "DEFAULT", "RETURN", "BREAK", "CONTINUE", "APPEND", 
		"LEN", "CAP", "PRINT", "PRINTLN", "PLUS", "MINUS", "STAR", "DIV", "MOD", 
		"AMP", "PIPE", "CARET", "LSHIFT", "RSHIFT", "BIT_CLEAR", "LOGICAL_AND", 
		"LOGICAL_OR", "NOT", "EQUALS", "NOT_EQUALS", "LESS", "LESS_EQUALS", "GREATER", 
		"GREATER_EQUALS", "ASSIGN", "DECLARE_ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", 
		"STAR_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "AMP_ASSIGN", "PIPE_ASSIGN", 
		"CARET_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "BIT_CLEAR_ASSIGN", 
		"INCREMENT", "DECREMENT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
		"RBRACKET", "COMMA", "DOT", "COLON", "SEMICOLON", "INTLITERAL", "FLOATLITERAL", 
		"RUNELITERAL", "RAWSTRINGLITERAL", "INTERPRETEDSTRINGLITERAL", "IDENTIFIER", 
		"LINE_COMMENT", "BLOCK_COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MiniGoParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MiniGoParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MiniGoParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MiniGoParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class RootContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PACKAGE() { return GetToken(MiniGoParser.PACKAGE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(MiniGoParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(MiniGoParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TopDeclarationListContext topDeclarationList() {
			return GetRuleContext<TopDeclarationListContext>(0);
		}
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoParserVisitor<TResult> typedVisitor = visitor as IMiniGoParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(Context, State);
		EnterRule(_localctx, 0, RULE_root);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			Match(PACKAGE);
			State = 81;
			Match(IDENTIFIER);
			State = 82;
			Match(SEMICOLON);
			State = 83;
			topDeclarationList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopDeclarationListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclContext[] variableDecl() {
			return GetRuleContexts<VariableDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclContext variableDecl(int i) {
			return GetRuleContext<VariableDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclContext[] typeDecl() {
			return GetRuleContexts<TypeDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclContext typeDecl(int i) {
			return GetRuleContext<TypeDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDeclContext[] funcDecl() {
			return GetRuleContexts<FuncDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDeclContext funcDecl(int i) {
			return GetRuleContext<FuncDeclContext>(i);
		}
		public TopDeclarationListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topDeclarationList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoParserVisitor<TResult> typedVisitor = visitor as IMiniGoParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTopDeclarationList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TopDeclarationListContext topDeclarationList() {
		TopDeclarationListContext _localctx = new TopDeclarationListContext(Context, State);
		EnterRule(_localctx, 2, RULE_topDeclarationList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 28L) != 0)) {
				{
				State = 88;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case VAR:
					{
					State = 85;
					variableDecl();
					}
					break;
				case TYPE:
					{
					State = 86;
					typeDecl();
					}
					break;
				case FUNC:
					{
					State = 87;
					funcDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAR() { return GetToken(MiniGoParser.VAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SingleVarDeclContext singleVarDecl() {
			return GetRuleContext<SingleVarDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(MiniGoParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(MiniGoParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public InnerVarDeclsContext innerVarDecls() {
			return GetRuleContext<InnerVarDeclsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(MiniGoParser.RPAREN, 0); }
		public VariableDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoParserVisitor<TResult> typedVisitor = visitor as IMiniGoParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclContext variableDecl() {
		VariableDeclContext _localctx = new VariableDeclContext(Context, State);
		EnterRule(_localctx, 4, RULE_variableDecl);
		try {
			State = 107;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 93;
				Match(VAR);
				State = 94;
				singleVarDecl();
				State = 95;
				Match(SEMICOLON);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 97;
				Match(VAR);
				State = 98;
				Match(LPAREN);
				State = 99;
				innerVarDecls();
				State = 100;
				Match(RPAREN);
				State = 101;
				Match(SEMICOLON);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 103;
				Match(VAR);
				State = 104;
				Match(LPAREN);
				State = 105;
				Match(RPAREN);
				State = 106;
				Match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InnerVarDeclsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SingleVarDeclContext[] singleVarDecl() {
			return GetRuleContexts<SingleVarDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SingleVarDeclContext singleVarDecl(int i) {
			return GetRuleContext<SingleVarDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEMICOLON() { return GetTokens(MiniGoParser.SEMICOLON); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON(int i) {
			return GetToken(MiniGoParser.SEMICOLON, i);
		}
		public InnerVarDeclsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_innerVarDecls; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoParserVisitor<TResult> typedVisitor = visitor as IMiniGoParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInnerVarDecls(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InnerVarDeclsContext innerVarDecls() {
		InnerVarDeclsContext _localctx = new InnerVarDeclsContext(Context, State);
		EnterRule(_localctx, 6, RULE_innerVarDecls);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			singleVarDecl();
			State = 110;
			Match(SEMICOLON);
			State = 116;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				State = 111;
				singleVarDecl();
				State = 112;
				Match(SEMICOLON);
				}
				}
				State = 118;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SingleVarDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierListContext identifierList() {
			return GetRuleContext<IdentifierListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclTypeContext declType() {
			return GetRuleContext<DeclTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(MiniGoParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionListContext expressionList() {
			return GetRuleContext<ExpressionListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SingleVarDeclNoExpsContext singleVarDeclNoExps() {
			return GetRuleContext<SingleVarDeclNoExpsContext>(0);
		}
		public SingleVarDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_singleVarDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoParserVisitor<TResult> typedVisitor = visitor as IMiniGoParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingleVarDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SingleVarDeclContext singleVarDecl() {
		SingleVarDeclContext _localctx = new SingleVarDeclContext(Context, State);
		EnterRule(_localctx, 8, RULE_singleVarDecl);
		try {
			State = 129;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 119;
				identifierList();
				State = 120;
				declType();
				State = 121;
				Match(ASSIGN);
				State = 122;
				expressionList();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 124;
				identifierList();
				State = 125;
				Match(ASSIGN);
				State = 126;
				expressionList();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 128;
				singleVarDeclNoExps();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SingleVarDeclNoExpsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierListContext identifierList() {
			return GetRuleContext<IdentifierListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclTypeContext declType() {
			return GetRuleContext<DeclTypeContext>(0);
		}
		public SingleVarDeclNoExpsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_singleVarDeclNoExps; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoParserVisitor<TResult> typedVisitor = visitor as IMiniGoParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingleVarDeclNoExps(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SingleVarDeclNoExpsContext singleVarDeclNoExps() {
		SingleVarDeclNoExpsContext _localctx = new SingleVarDeclNoExpsContext(Context, State);
		EnterRule(_localctx, 10, RULE_singleVarDeclNoExps);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131;
			identifierList();
			State = 132;
			declType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TYPE() { return GetToken(MiniGoParser.TYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SingleTypeDeclContext singleTypeDecl() {
			return GetRuleContext<SingleTypeDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(MiniGoParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(MiniGoParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public InnerTypeDeclsContext innerTypeDecls() {
			return GetRuleContext<InnerTypeDeclsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(MiniGoParser.RPAREN, 0); }
		public TypeDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoParserVisitor<TResult> typedVisitor = visitor as IMiniGoParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeDeclContext typeDecl() {
		TypeDeclContext _localctx = new TypeDeclContext(Context, State);
		EnterRule(_localctx, 12, RULE_typeDecl);
		try {
			State = 148;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 134;
				Match(TYPE);
				State = 135;
				singleTypeDecl();
				State = 136;
				Match(SEMICOLON);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 138;
				Match(TYPE);
				State = 139;
				Match(LPAREN);
				State = 140;
				innerTypeDecls();
				State = 141;
				Match(RPAREN);
				State = 142;
				Match(SEMICOLON);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 144;
				Match(TYPE);
				State = 145;
				Match(LPAREN);
				State = 146;
				Match(RPAREN);
				State = 147;
				Match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InnerTypeDeclsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SingleTypeDeclContext[] singleTypeDecl() {
			return GetRuleContexts<SingleTypeDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SingleTypeDeclContext singleTypeDecl(int i) {
			return GetRuleContext<SingleTypeDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEMICOLON() { return GetTokens(MiniGoParser.SEMICOLON); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON(int i) {
			return GetToken(MiniGoParser.SEMICOLON, i);
		}
		public InnerTypeDeclsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_innerTypeDecls; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoParserVisitor<TResult> typedVisitor = visitor as IMiniGoParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInnerTypeDecls(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InnerTypeDeclsContext innerTypeDecls() {
		InnerTypeDeclsContext _localctx = new InnerTypeDeclsContext(Context, State);
		EnterRule(_localctx, 14, RULE_innerTypeDecls);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 150;
			singleTypeDecl();
			State = 151;
			Match(SEMICOLON);
			State = 157;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				State = 152;
				singleTypeDecl();
				State = 153;
				Match(SEMICOLON);
				}
				}
				State = 159;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
